--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,5 +3,10 @@
 @tailwind utilities;
 
 [x-cloak] {
-	display: none;
+    display: none;
+}
+
+.border-red {
+	border: 1px solid red !important;
+
 }
